tests/baselines/reference/parserConstructorAmbiguity2.errors.txt
parserConstructorAmbiguity2.ts(1,10): error TS2304: Cannot find name 'A'.


==== parserConstructorAmbiguity2.ts (1 errors) ====
    new Date<A
             ~
!!! error TS2304: Cannot find name 'A'.